--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <meta charset="utf-8">
+        <meta name="description" content="A narrative website made for the DART 206 class at Penn State University.">
         <title>House to Home</title>
+        <link rel="icon" type="image/x-icon" href="./Images/Favicon.png">
         <link rel="stylesheet" href="./styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,11 +17,20 @@
             <div id="-introAnimation"></div>
         </section>
         <!--  -->
+        <div id="-paginationAnimation"></div>
         <main>
             <section class="_hero" aria-label="The hero section">
                 <div id="-titleAnimation"></div>
-                <div class="_pagination"></div>
                 <img class="_blueprint _heroBlueprint" src="./images/HERO Blueprint Background.png" alt="" height="1080" width="1920">
+            </section>
+            <section class="_section _question" aria-label="THE QUESTION section">
+                <div class="_text _questionText">
+                    <h5 class="_textSubHeading _questionSubHeading">DO WE NEED A NEW HOME?</h5>
+                    <h2 class="_textHeading _questionHeading">THE QUESTION</h2>
+                    <p class="_textBody _questionBody">3 kids down to none living at home. What are we going to do with all this extra space? <br> Maybe it's time to start looking for some place else. What about North Carolina? That seems nice...</p>
+                </div>
+                <img class="_textBackground _questionBackground" src="/Images/THE QUESTION Text Background.png" alt="">
+                <div class="_illustration _questionIllustration"></div>
             </section>
         </main>
         <script src="./lottie.js"></script>
