--- a/index.html
+++ b/index.html
@@ -32,6 +32,46 @@
                 <img class="_textBackground _questionBackground" src="/Images/THE QUESTION Text Background.png" alt="">
                 <div class="_illustration _questionIllustration"></div>
             </section>
+            <section class="_section _decision" aria-label="THE DECISION section">
+                <div class="_text _decisionText">
+                    <h5 class="_textSubHeading _decisionSubHeading">WHERE, WHEN, WHAT?</h5>
+                    <h2 class="_textHeading _decisionHeading">THE DECISION</h2>
+                    <p class="_textBody _decisionBody">The family has decided on a new family house. After much deliberation over where the house should be, when they will be moving, what type of house they want, and many more important questions, <br> They decide on an Appalachian styled home in the North Carolina town of Asheville. "It's perfect" they exclaim.</p>
+                </div>
+                <img class="_textBackground _decisionBackground" src="/Images/THE DECISION Text Background.png" alt="">
+                <div class="_illustration" id="-deicisionIllustration"></div>
+                <img class="_blueprint _decisionBlueprint" src="./Images/THE DECISION Blueprint.png" alt="" height="1080" width="1920">
+            </section>
+            <section class="_section _move" aria-label="THE MOVE section">
+                <div class="_text _moveText">
+                    <h5 class="_textSubHeading _moveSubHeading">IS THIS REALLY HAPPENING?</h5>
+                    <h2 class="_textHeading _moveHeading">THE MOVE</h2>
+                    <p class="_textBody _moveBody">Well, it's really happening! The moving truck is packed and the family makes off toward their new city, state, and way of life. They're sad watching their previous home of 25+ years fade in the mirror, but they are excited for change.</p>
+                </div>
+                <img class="_textBackground _moveBackground" src="/Images/THE HOME Text Background.png" alt="">
+                <div class="_illustration" id="-moveIllustration"></div>
+                <img class="_blueprint _moveBlueprint" src="./Images/THE MOVE Blueprint.png" alt="" height="1080" width="1920">
+            </section>
+            <section class="_section _reveal" aria-label="THE REVEAL section">
+                <div class="_text _revealText">
+                    <h5 class="_textSubHeading _revealSubHeading">THIS IS IT!</h5>
+                    <h2 class="_textHeading _revealHeading">THE MOVE</h2>
+                    <p class="_textBody _revealBody">The family has finally made it to their new house and it is just how they imagined (and hoped) it would be. All those sleepless nights and days of planning ruminating and mulling over the smallest details -- what color shutters they wanted was a <em>huge</em> discussion -- has been worth it. A new chapter has started while another has closed. Almost simultaneously, they say, "We're ...</p>
+                </div>
+                <img class="_textBackground _revealBackground" src="/Images/THE REVEAL Text Background.png" alt="">
+                <div class="_illustration" id="-revealIllustration"></div>
+                <img class="_blueprint _revealBlueprint" src="./Images/THE REVEAL Blueprint.png" alt="" height="1080" width="1920">
+            </section>
+            <section class="_section _home" aria-label="THE HOME section">
+                <div class="_text _homeText">
+                    <h5 class="_textSubHeading _homeSubHeading">THE HOUSE IS NOW HOME</h5>
+                    <h2 class="_textHeading _homeHeading">HOME</h2>
+                    <p class="_textBody _homeBody"><span>HOME!"</span>. The house is now a <em>home</em>, their <span>home</span>. It feels different and new at first. Things like forgetting where the light switches are located and what items go where are common at first, but it doesn't last. Soon, the farmiliar home cadence is restored and things are almost as they always were. Even the family pets get used to the new space and it's not long before they find their favorite sleeping spots again. The journey brings up an interesting thought. is home where you live or where you are?</p>
+                </div>
+                <img class="_textBackground _homeBackground" src="/IMAGES/THE HOME Text Background.png" alt="">
+                <div class="_illustration" id="-homeIllustration"></div>
+                <img class="_blueprint _homeBlueprint" src="./Images/THE HOME Blueprint.png" alt="" height="1080" width="1920">
+            </section>
         </main>
         <script src="./lottie.js"></script>
         <script src="./scripts.js"></script>
