--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
                 <div id="-titleAnimation"></div>
                 <img class="_blueprint _heroBlueprint" src="./Images/HERO Blueprint Background.png" alt="" height="1080" width="1920">
             </section>
+            <div class="_sectionDivider _questionSectionDivider"></div>
             <section class="_section _question" aria-label="THE QUESTION section">
+                <div class="_lines" id="-questionLines"></div>
                 <div class="_text _questionText">
                     <h5 class="_textSubHeading _questionSubHeading">DO WE NEED A NEW HOME?</h5>
                     <h2 class="_textHeading _questionHeading">THE QUESTION</h2>
                     <p class="_textBody _questionBody">3 kids down to none living at home. What are we going to do with all this extra space? <br> Maybe it's time to start looking for some place else. What about North Carolina? That seems nice...</p>
                 </div>
                 <img class="_textBackground _questionBackground" src="./Images/THE QUESTION Text Background.png" alt="">
-                <div class="_illustration" id="-questionIllustration"></div>
                 <img class="_blueprint _questionBlueprint" src="./Images/THE QUESTION Blueprint Background.png" alt="" height="1080" width="1920">
+                <div class="_illustration" id="-questionIllustration"></div>
             </section>
+            <div class="_sectionDivider _decisionSectionDivider"></div>
             <section class="_section _decision" aria-label="THE DECISION section">
                 <div class="_text _decisionText">
                     <h5 class="_textSubHeading _decisionSubHeading">WHERE, WHEN, WHAT?</h5>
@@ -43,6 +46,7 @@
                 <div class="_illustration" id="-deicisionIllustration"></div>
                 <img class="_blueprint _decisionBlueprint" src="./Images/THE DECISION Blueprint Background.png" alt="" height="1080" width="1920">
             </section>
+            <div class="_sectionDivider _moveSectionDivider"></div>
             <section class="_section _move" aria-label="THE MOVE section">
                 <div class="_text _moveText">
                     <h5 class="_textSubHeading _moveSubHeading">IS THIS REALLY HAPPENING?</h5>
@@ -53,6 +57,7 @@
                 <div class="_illustration" id="-moveIllustration"></div>
                 <img class="_blueprint _moveBlueprint" src="./Images/THE MOVE Blueprint Background.png" alt="" height="1080" width="1920">
             </section>
+            <div class="_sectionDivider _revealSectionDivider"></div>
             <section class="_section _reveal" aria-label="THE REVEAL section">
                 <div class="_text _revealText">
                     <h5 class="_textSubHeading _revealSubHeading">THIS IS IT!</h5>
@@ -63,6 +68,7 @@
                 <div class="_illustration" id="-revealIllustration"></div>
                 <img class="_blueprint _revealBlueprint" src="./Images/THE REVEAL Blueprint Background.png" alt="" height="1080" width="1920">
             </section>
+            <div class="_sectionDivider _homeSectionDivider"></div>
             <section class="_section _home" aria-label="THE HOME section">
                 <div class="_text _homeText">
                     <h5 class="_textSubHeading _homeSubHeading">THE HOUSE IS NOW HOME</h5>
@@ -74,6 +80,9 @@
                 <img class="_blueprint _homeBlueprint" src="./Images/HERO Blueprint Background.png" alt="" height="1080" width="1920">
             </section>
         </main>
+        <footer>
+            <p>©[NAME] 2023</p>
+        </footer>
         <script src="./firstImpression.min.js"></script>
         <script src="./lottie.js"></script>
         <script src="./scripts.js"></script>
