--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="_text _questionText">
                     <h5 class="_textSubHeading _questionSubHeading">DO WE NEED A NEW HOME?</h5>
                     <h2 class="_textHeading _questionHeading">THE QUESTION</h2>
-                    <p class="_textBody _questionBody">3 kids down to none living at home. What are we going to do with all this extra space? <br> Maybe it's time to start looking for some place else. What about North Carolina? That seems nice...</p>
+                    <p class="_textBody _questionBody">3 kids down to none living at home. What are we going to do with all this extra space? Maybe it's time to start looking for some place else. What about North Carolina? That seems nice...</p>
                 </div>
                 <img class="_textBackground _questionBackground" src="./Images/THE QUESTION Text Background.png" alt="">
                 <img class="_blueprint _questionBlueprint" src="./Images/THE QUESTION Blueprint Background.png" alt="" height="1080" width="1920">
@@ -40,7 +40,7 @@
                 <div class="_text _decisionText">
                     <h5 class="_textSubHeading _decisionSubHeading">WHERE, WHEN, WHAT?</h5>
                     <h2 class="_textHeading _decisionHeading">THE DECISION</h2>
-                    <p class="_textBody _decisionBody">The family has decided on a new family house. After much deliberation over where the house should be, when they will be moving, what type of house they want, and many more important questions, <br> They decide on an Appalachian styled home in the North Carolina town of Asheville. "It's perfect" they exclaim.</p>
+                    <p class="_textBody _decisionBody">The family has decided on a new family house. After much deliberation over where the house should be, when they will be moving, what type of house they want, and many more important questions, They decide on an Appalachian styled home in the North Carolina town of Asheville. "It's perfect" they exclaim.</p>
                 </div>
                 <img class="_textBackground _decisionBackground" src="./Images/THE DECISION Text Background.png" alt="">
                 <div class="_illustration" id="-deicisionIllustration"></div>
