--- a/index.html
+++ b/index.html
@@ -37,17 +37,19 @@
             </section>
             <div class="_sectionDivider _decisionSectionDivider"></div>
             <section class="_section _decision" aria-label="THE DECISION section">
+                <div class="_lines" id="-decisionLines"></div>
                 <div class="_text _decisionText">
                     <h5 class="_textSubHeading _decisionSubHeading">WHERE, WHEN, WHAT?</h5>
                     <h2 class="_textHeading _decisionHeading">THE DECISION</h2>
                     <p class="_textBody _decisionBody">The family has decided on a new family house. After much deliberation over where the house should be, when they will be moving, what type of house they want, and many more important questions, They decide on an Appalachian styled home in the North Carolina town of Asheville. "It's perfect" they exclaim.</p>
                 </div>
                 <img class="_textBackground _decisionBackground" src="./Images/THE DECISION Text Background.png" alt="">
-                <div class="_illustration" id="-deicisionIllustration"></div>
+                <div class="_illustration" id="-decisionIllustration"></div>
                 <img class="_blueprint _decisionBlueprint" src="./Images/THE DECISION Blueprint Background.png" alt="" height="1080" width="1920">
             </section>
             <div class="_sectionDivider _moveSectionDivider"></div>
             <section class="_section _move" aria-label="THE MOVE section">
+                <div class="_lines" id="-moveLines"></div>
                 <div class="_text _moveText">
                     <h5 class="_textSubHeading _moveSubHeading">IS THIS REALLY HAPPENING?</h5>
                     <h2 class="_textHeading _moveHeading">THE MOVE</h2>
