--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Zilla+Slab:wght@400;600;700&display=swap" rel="stylesheet">
     </head>
+    <script src="./firstImpression.min.js"></script>
     <body>
         <!-- Intro animation -->
         <section class="_intro _hideIntro">
@@ -20,6 +21,7 @@
         <div id="-paginationAnimation"></div>
         <main>
             <section class="_hero" aria-label="The hero section">
+                <div class="_lines" id="-heroLines"></div>
                 <div id="-titleAnimation"></div>
                 <img class="_blueprint _heroBlueprint" src="./Images/HERO Blueprint Background.png" alt="" height="1080" width="1920">
             </section>
@@ -61,9 +63,10 @@
             </section>
             <div class="_sectionDivider _revealSectionDivider"></div>
             <section class="_section _reveal" aria-label="THE REVEAL section">
+                <div class="_lines" id="-revealLines"></div>
                 <div class="_text _revealText">
                     <h5 class="_textSubHeading _revealSubHeading">THIS IS IT!</h5>
-                    <h2 class="_textHeading _revealHeading">THE MOVE</h2>
+                    <h2 class="_textHeading _revealHeading">THE REVEAL</h2>
                     <p class="_textBody _revealBody">The family has finally made it to their new house and it is just how they imagined (and hoped) it would be. All those sleepless nights and days of planning ruminating and mulling over the smallest details -- what color shutters they wanted was a <em>huge</em> discussion -- has been worth it. A new chapter has started while another has closed. Almost simultaneously, they say, "We're ...</p>
                 </div>
                 <img class="_textBackground _revealBackground" src="./Images/THE REVEAL Text Background.png" alt="">
@@ -72,20 +75,20 @@
             </section>
             <div class="_sectionDivider _homeSectionDivider"></div>
             <section class="_section _home" aria-label="THE HOME section">
+                <div class="_lines" id="-homeLines"></div>
                 <div class="_text _homeText">
                     <h5 class="_textSubHeading _homeSubHeading">THE HOUSE IS NOW HOME</h5>
                     <h2 class="_textHeading _homeHeading">HOME</h2>
-                    <p class="_textBody _homeBody"><span>HOME!"</span>. The house is now a <em>home</em>, their <span>home</span>. It feels different and new at first. Things like forgetting where the light switches are located and what items go where are common at first, but it doesn't last. Soon, the farmiliar home cadence is restored and things are almost as they always were. Even the family pets get used to the new space and it's not long before they find their favorite sleeping spots again. The journey brings up an interesting thought. is home where you live or where you are?</p>
+                    <p class="_textBody _homeBody">HOME!". The house is now a <em>home</em>, their <em>home</em>. It feels different and new at first. Things like forgetting where the light switches are located and what items go where are common at first, but it doesn't last. Soon, the farmiliar home cadence is restored and things are almost as they always were. Even the family pets get used to the new space and it's not long before they find their favorite sleeping spots again. The journey brings up an interesting thought. Is <span id="-inlineHomeSpan"><img id="-inlineHome" src="/Images/HOME Inline.png"></span>where you live or where you are?</p>
                 </div>
                 <img class="_textBackground _homeBackground" src="./Images/HOME Text Background.png" alt="">
                 <div class="_illustration" id="-homeIllustration"></div>
-                <img class="_blueprint _homeBlueprint" src="./Images/HERO Blueprint Background.png" alt="" height="1080" width="1920">
+                <img class="_blueprint _homeBlueprint" src="./Images/HOME Blueprint Background.png" alt="" height="1080" width="1920">
             </section>
         </main>
         <footer>
-            <p>©[NAME] 2023</p>
+            <p><strong>© ADAM WARSING 2023</strong></p>
         </footer>
-        <script src="./firstImpression.min.js"></script>
         <script src="./lottie.js"></script>
         <script src="./scripts.js"></script>
     </body>
