--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         <footer>
             <p><strong>© ADAM WARSING 2023</strong></p>
         </footer>
-        <script src="./firstImpression.min.js"></script>
-        <script src="./lottie.js"></script>
-        <script src="./scripts.js"></script>
+        <script src="firstImpression.min.js"></script>
+        <script src="lottie.js"></script>
+        <script src="scripts.js"></script>
     </body>
     
 </html>
