--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <p><strong>© ADAM WARSING 2023</strong></p>
         </footer>
         <script src="firstImpression.min.js"></script>
-        <script src="lottie.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.2/lottie.min.js" integrity="sha512-fTTVSuY9tLP+l/6c6vWz7uAQqd1rq3Q/GyKBN2jOZvJSLC5RjggSdboIFL1ox09/Ezx/AKwcv/xnDeYN9+iDDA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="scripts.js"></script>
     </body>
 
 </html>
