--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="_text _homeText">
                     <h5 class="_textSubHeading _homeSubHeading">THE HOUSE IS NOW HOME</h5>
                     <h2 class="_textHeading _homeHeading">HOME</h2>
-                    <p class="_textBody _homeBody">HOME!". The house is now a <em>home</em>, their <em>home</em>. It feels different and new at first. Things like forgetting where the light switches are located and what items go where are common at first, but it doesn't last. Soon, the farmiliar home cadence is restored and things are almost as they always were. Even the family pets get used to the new space and it's not long before they find their favorite sleeping spots again. The journey brings up an interesting thought. Is <span id="-inlineHomeSpan"><img id="-inlineHome" src="/Images/HOME Inline.png"></span>where you live or where you are?</p>
+                    <p class="_textBody _homeBody">HOME!". The house is now a <em>home</em>, their <em>home</em>. It feels different and new at first. Things like forgetting where the light switches are located and what items go where are common at first, but it doesn't last. Soon, the farmiliar home cadence is restored and things are almost as they always were. Even the family pets get used to the new space and it's not long before they find their favorite sleeping spots again. The journey brings up an interesting thought. Is <span id="-inlineHomeSpan"><img id="-inlineHome" src="./Images/HOME Inline.png"></span>where you live or where you are?</p>
                 </div>
                 <img class="_textBackground _homeBackground" src="./Images/HOME Text Background.png" alt="">
                 <div class="_illustration" id="-homeIllustration"></div>
