--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main>
             <section class="_hero" aria-label="The hero section">
                 <div class="_lines" id="-heroLines"></div>
-                <div id="-titleAnimation"></div>
+                <div id="-titleAnimation" aria-label="HOME"></div>
                 <img class="_blueprint _heroBlueprint" src="./Images/HERO Blueprint Background.png" alt="" height="1080" width="1920">
             </section>
             <div class="_sectionDivider _questionSectionDivider"></div>
